<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">




    <TextView
        android:id="@+id/Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:text="@string/title"
        android:textSize="90sp"
        android:typeface="serif"
        app:fontFamily="@font/annie_use_your_telescope" />

    <TextView
        android:id="@+id/Instructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="125dp"
        android:text="@string/instructions"
        android:textSize="40dp"
        android:typeface="serif"
        app:fontFamily="@font/annie_use_your_telescope" />

    <TextView
        android:id="@+id/player1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="190dp"
        android:text="@string/p1"
        android:textSize="36sp"
        android:typeface="normal"
        app:fontFamily="casual" />

    <Button
        android:id="@+id/startGame"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="560dp"
        android:text="@string/start_button" />

    <Button
        android:id="@+id/startGame2"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="630dp"
        android:text="@string/new_images" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:layout_marginTop="240dp">

        <ImageButton
            android:id="@+id/imageB_00"
            android:layout_width="10dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/red1"
            android:text="X"
            android:textSize="50sp"></ImageButton>

        <ImageButton
            android:id="@+id/imageB_01"
            android:layout_width="10dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/red2"
            android:text=""
            android:textSize="50sp"></ImageButton>

        <ImageButton
            android:id="@+id/imageB_02"
            android:layout_width="10dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/red3"
            android:text=""
            android:textSize="50sp"></ImageButton>

        <ImageButton
            android:id="@+id/imageB_03"
            android:layout_width="10dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/red4"
            android:text=""
            android:textSize="50sp"></ImageButton>

        <ImageButton
            android:id="@+id/imageB_04"
            android:layout_width="10dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/red5"
            android:text=""
            android:textSize="50sp"></ImageButton>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="317dp">

        <TextView
            android:id="@+id/pet_00"
            android:layout_width="75dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="0dp"
            android:layout_weight="1"
            android:text="@string/selection"
            android:textSize="18sp"
            android:typeface="normal"
            app:fontFamily="casual" />

        <TextView
            android:id="@+id/pet_01"
            android:layout_width="75dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="0dp"
            android:layout_weight="1"
            android:text=""
            android:textSize="18sp"
            android:typeface="normal"
            app:fontFamily="casual" />

        <TextView
            android:id="@+id/pet_02"
            android:layout_width="75dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="0dp"
            android:layout_weight="1"
            android:text=""
            android:textSize="18sp"
            android:typeface="normal"
            app:fontFamily="casual" />

        <TextView
            android:id="@+id/pet_03"
            android:layout_width="75dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="0dp"
            android:layout_weight="1"
            android:text=""
            android:textSize="18sp"
            android:typeface="normal"
            app:fontFamily="casual" />

        <TextView
            android:id="@+id/pet_04"
            android:layout_width="75dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="0dp"
            android:layout_weight="1"
            android:text=""
            android:textSize="18sp"
            android:typeface="normal"
            app:fontFamily="casual" />
    </LinearLayout>


    <TextView
        android:id="@+id/player2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="400dp"
        android:text="@string/p2"
        android:textSize="36sp"
        android:typeface="normal"
        app:fontFamily="casual" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:layout_marginTop="450dp">

        <ImageButton
            android:id="@+id/imageB_10"
            android:layout_width="10dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/blue1"
            android:text="X"
            android:textSize="50sp"></ImageButton>

        <ImageButton
            android:id="@+id/imageB_11"
            android:layout_width="10dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/blue2"
            android:text=""
            android:textSize="50sp"></ImageButton>

        <ImageButton
            android:id="@+id/imageB_12"
            android:layout_width="10dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/blue3"
            android:text=""
            android:textSize="50sp"></ImageButton>

        <ImageButton
            android:id="@+id/imageB_13"
            android:layout_width="10dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/blue4"
            android:text=""
            android:textSize="50sp"></ImageButton>

        <ImageButton
            android:id="@+id/imageB_14"
            android:layout_width="10dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/blue5"
            android:text=""
            android:textSize="50sp"></ImageButton>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="526dp">

        <TextView
            android:id="@+id/pet_10"
            android:layout_width="75dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="0dp"
            android:layout_weight="1"
            android:text="@string/selection"
            android:textSize="18sp"
            android:typeface="normal"
            app:fontFamily="casual" />

        <TextView
            android:id="@+id/pet_11"
            android:layout_width="75dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="0dp"
            android:layout_weight="1"
            android:text=""
            android:textSize="18sp"
            android:typeface="normal"
            app:fontFamily="casual" />

        <TextView
            android:id="@+id/pet_12"
            android:layout_width="75dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="0dp"
            android:layout_weight="1"
            android:text=""
            android:textSize="18sp"
            android:typeface="normal"
            app:fontFamily="casual" />

        <TextView
            android:id="@+id/pet_13"
            android:layout_width="75dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="0dp"
            android:layout_weight="1"
            android:text=""
            android:textSize="18sp"
            android:typeface="normal"
            app:fontFamily="casual" />

        <TextView
            android:id="@+id/pet_14"
            android:layout_width="75dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="0dp"
            android:layout_weight="1"
            android:text=""
            android:textSize="18sp"
            android:typeface="normal"
            app:fontFamily="casual" />
    </LinearLayout>

    <TextView
        android:id="@+id/debug"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="350dp"
        android:text="not changed"
        android:textSize="18sp"
        android:typeface="normal"
        app:fontFamily="casual" />


</RelativeLayout>